<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.0</version>
        <relativePath/>
    </parent>

    <groupId>com.learnwords</groupId>
    <artifactId>learnwords-services</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>learnwords-parent</name>
    <description>Parent project for LearnWords</description>

    <properties>
        <java.version>24</java.version>
        <spring-boot-version>3.5.0</spring-boot-version>
        <spring-boot-starter-web>3.5.3</spring-boot-starter-web>
        <spring-boot-starter-data-jpa>3.5.3</spring-boot-starter-data-jpa>
        <spring-boot-starter-validation>3.5.3</spring-boot-starter-validation>
        <spring-boot-starter-test>3.5.3</spring-boot-starter-test>
        <spring-boot-starter-data-redis>3.5.3</spring-boot-starter-data-redis>
        <spring-boot-starter-cache>3.5.3</spring-boot-starter-cache>
        <spring-cloud-starter-openfeign>4.3.0</spring-cloud-starter-openfeign>
        <spring-boot-starter-data-mongodb-reactive>3.5.4</spring-boot-starter-data-mongodb-reactive>
        <jakarta-persistence-api>3.1.0</jakarta-persistence-api>
        <spring-boot-starter-data-mongodb>3.5.2</spring-boot-starter-data-mongodb>
        <postgresql>42.7.7</postgresql>
        <spring-boot-starter-oauth2-resource-server>3.5.3</spring-boot-starter-oauth2-resource-server>
        <spring-security-oauth2-jose>6.5.1</spring-security-oauth2-jose>
        <nimbus-jose-jwt>10.3.1</nimbus-jose-jwt>
        <jjwt-jackson>0.11.5</jjwt-jackson>
        <jjwt-impl>0.11.5</jjwt-impl>
        <jjwt-api>0.11.5</jjwt-api>
<!--        <bcpkix-jdk18on>1.76</bcpkix-jdk18on>-->
        <bcpkix-jdk18on>1.81</bcpkix-jdk18on>
        <kafka>3.3.7</kafka>
        <lombok-version>1.18.38</lombok-version>
        <logstash-version>8.1</logstash-version>
        <ecs-encoder-version>1.7.0</ecs-encoder-version>
        <springdoc-version>2.8.8</springdoc-version>
        <hibernate-types-60>2.21.1</hibernate-types-60>
        <h2>2.3.232</h2>
        <spring-cloud-version>2025.0.0</spring-cloud-version>
<!--        Grcp-->
        <protobuf-java-version>3.25.5</protobuf-java-version>
        <grpc.version>1.75.0</grpc.version>
<!--        <grpc-stub-version>1.75.0</grpc-stub-version>-->
<!--        <grpc-protobuf-version>1.75.0</grpc-protobuf-version>-->
<!--        <grpc-netty-shaded-version>1.75.0</grpc-netty-shaded-version>-->
<!--        <grpc-services-version>1.75.0</grpc-services-version>-->

        <grpc-spring-boot-starter-version>3.1.0.RELEASE</grpc-spring-boot-starter-version>

<!--        Koniec Grcp-->
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- ====== GRPC ====== -->
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-bom</artifactId>
                <version>${grpc.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java -->
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java</artifactId>
                <version>${protobuf-java-version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/net.devh/grpc-server-spring-boot-starter -->
            <dependency>
                <groupId>net.devh</groupId>
                <artifactId>grpc-server-spring-boot-starter</artifactId>
                <version>${grpc-spring-boot-starter-version}</version>
            </dependency>
            <!-- ====== Koniec GRPC ====== -->





            <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-mongodb-reactive -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
                <version>${spring-boot-starter-data-mongodb-reactive}</version>
            </dependency>



            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud-version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- ====== WSPÓLNY MODUŁ ====== -->
            <dependency>
                <groupId>com.learnwords</groupId>
                <artifactId>common</artifactId>
                <version>0.0.1-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.learnwords</groupId>
                <artifactId>vocabulary-read-service</artifactId>
                <version>0.0.1-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.learnwords</groupId>
                <artifactId>proto-shared</artifactId>
                <version>0.0.1-SNAPSHOT</version>
            </dependency>
            <!-- ====== LOMBOK ====== -->
            <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok-version}</version>
                <scope>provided</scope>
            </dependency>
            <!-- ====== SYSTEM DO LOGOW ====== -->
            <!-- https://mvnrepository.com/artifact/net.logstash.logback/logstash-logback-encoder -->
            <dependency>
                <groupId>net.logstash.logback</groupId>
                <artifactId>logstash-logback-encoder</artifactId>
                <version>${logstash-version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/co.elastic.logging/logback-ecs-encoder -->
            <dependency>
                <groupId>co.elastic.logging</groupId>
                <artifactId>logback-ecs-encoder</artifactId>
                <version>${ecs-encoder-version}</version>
            </dependency>
            <!-- ====== SPRINGDOC OPENAPI ====== -->
            <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc-version}</version>
            </dependency>

            <!-- ====== SPRING BOOT STARTERY ====== -->
            <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-web</artifactId>
                <version>${spring-boot-starter-web}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-data-jpa</artifactId>
                <version>${spring-boot-starter-data-jpa}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-validation</artifactId>
                <version>${spring-boot-starter-validation}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <version>${spring-boot-starter-test}</version>
                <scope>test</scope>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-starter-openfeign</artifactId>
                <version>${spring-cloud-starter-openfeign}</version>
            </dependency>

            <!-- ====== AUTORYZACJA ====== -->
            <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-oauth2-resource-server -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
                <version>${spring-boot-starter-oauth2-resource-server}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-oauth2-jose -->
            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-oauth2-jose</artifactId>
                <version>${spring-security-oauth2-jose}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/com.nimbusds/nimbus-jose-jwt -->
            <dependency>
                <groupId>com.nimbusds</groupId>
                <artifactId>nimbus-jose-jwt</artifactId>
                <version>${nimbus-jose-jwt}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-jackson -->
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jjwt-jackson}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-impl -->
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jjwt-impl}</version>
                <scope>runtime</scope>
            </dependency>
            <!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api -->
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jjwt-api}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.bouncycastle/bcpkix-jdk18on -->
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcpkix-jdk18on</artifactId>
                <version>${bcpkix-jdk18on}</version>
            </dependency>

            <!-- ====== BAZY DANYCH ====== -->
            <!-- https://mvnrepository.com/artifact/jakarta.persistence/jakarta.persistence-api -->
            <dependency>
                <groupId>jakarta.persistence</groupId>
                <artifactId>jakarta.persistence-api</artifactId>
                <version>${jakarta-persistence-api}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-mongodb -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-data-mongodb</artifactId>
                <version>${spring-boot-starter-data-mongodb}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgresql}</version>
            </dependency>

            <!-- ====== Dodatki ====== -->
            <!-- https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka -->
            <dependency>
                <groupId>org.springframework.kafka</groupId>
                <artifactId>spring-kafka</artifactId>
                <version>${kafka}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/com.vladmihalcea/hibernate-types-60 -->
            <dependency>
                <groupId>com.vladmihalcea</groupId>
                <artifactId>hibernate-types-60</artifactId>
                <version>${hibernate-types-60}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>${h2}</version>
                <scope>test</scope>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-data-redis</artifactId>
                <version>${spring-boot-starter-data-redis}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-cache -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-cache</artifactId>
                <version>${spring-boot-starter-cache}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>net.logstash.logback</groupId>
            <artifactId>logstash-logback-encoder</artifactId>
        </dependency>
        <dependency>
            <groupId>co.elastic.logging</groupId>
            <artifactId>logback-ecs-encoder</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
        </dependency>
    </dependencies>

    <modules>
        <module>common</module>
        <module>vocabulary-command-service</module>
        <module>vocabulary-read-service</module>
        <module>user-service</module>
        <module>deck-service</module>
        <module>proto-shared</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot-version}</version>
                </plugin>
                <!-- wspólny kompilator -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.0</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <compilerArgs>--enable-preview</compilerArgs>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok-version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>